# ai-feature-generator

./: .gitignore  Makefile  pyproject.toml
src/: main.py
src/api/: routes.py  schemas.py
src/core/: config.py
src/services/: llm_factory.py  llm_registry.py  llm_service.py  prompts.py
